k8s/issuetracker-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: issuetracker-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: issuetracker
  template:
    metadata:
      labels:
        app: issuetracker
    spec:
      containers:
        - name: issuetracker
          image: shivamk001/issuetracker
---

apiVersion: v1
kind: Service
metadata:
  name: issuetracker-srv
spec:
  selector:
    app: issuetracker
  ports:
    - name: issuetracker
      protocol: TCP
      port: 3000
      targetPort: 3000
