k8s/issuetracker-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: issuetracker-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: issuetracker-mongo
  template:
    metadata:
      labels:
        app: issuetracker-mongo
    spec:
      containers:
        - name: issuetracker-mongo
          image: mongo

---

apiVersion: v1
kind: Service
metadata:
  name: issuetracker-mongo-srv
spec:
  selector:
    app: issuetracker-mongo
  ports:
    - name: mongodb
      protocol: TCP
      port: 27017
      targetPort: 27017
